adicionei novas funcionalidades
